--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
       <section class="top">
         <div class="container">
           <h1>
-            Ми створюємо легкі рішення складних завдань для вашого бізнеса
+            Ми створюємо легкі рішення<br />
+            складних завдань для вашого бізнеса
           </h1>
           <button type="button">Замовити послугу</button>
         </div>
