--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
         <address>
           м. Харків, вул. Ярослава Мудрого, 18
           <ul>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380680001100">+38 068 000 11 00</a>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380680001100">+38 068 000 11 00</a></li>
           </ul>
         </address>
         <p>Приєднуйтесь</p>
