--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <h2 class="section-title">Роботи на яких спеціалізуємось</h2>
           <ul class="list">
             <li class="thumb">
-              <img
+              <img class="rounded"
                 src="images/code.jpg"
                 width="370"
                 height="294"
@@ -127,7 +127,7 @@
               />
             </li>
             <li class="thumb">
-              <img
+              <img class="rounded"
                 src="images/team.jpg"
                 width="370"
                 height="294"
@@ -135,7 +135,7 @@
               />
             </li>
             <li class="thumb">
-              <img
+              <img class="rounded"
                 src="images/laptops.jpg"
                 width="370"
                 height="294"
